reestructuracion de la caprpetade archivos para una mejor gestion

--- a/dev/views/logout.html
+++ b/dev/views/logout.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible"content="IE=edge">
     <meta name="robots" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cartera</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Logout</title>
+    <link rel="stylesheet" href="..\css\styles.css">
 </head>
-<body wallet>
+<body logout>
     <header><!--seccion para el titulo principal y el menu de navegacion
     -->
         <!--div para nuestro titulo o encabezado de pagina-->
         <div class="container-title">
-            <h1>Cartera</h1>
+            <h1>HATA LUEGO!.</h1>
             <div class="btnMenu">
                 <button class="btnMenu-popup">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class=".buttom-menu-icon">
@@ -125,89 +125,12 @@
             </nav>
         </div>
     </header>
-    <main>
-        <!--Pertenece al boton de login-->
-        <div class="btnLogin">
-            <button class="btnLogin-popup">login</button>
-        </div>
-        <!--Pertenece a la ventana de login-->
-        <div class="wrapper">
-            <span class="icon-close-login">
-                <ion-icon name="close-outline"></ion-icon>
-            </span>
-            <div class="form-box login">
-                <h2>
-                    Login
-                </h2>
-                <form action="#">
-                    <div class="input-box">
-                        <span class="iconss email-icon"><ion-icon name="mail-outline"></ion-icon></span>
-                        <input type="email" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="iconss password-icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                        <input type="password" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remember-forgot">
-                        <label><input type="checkbox">
-                        Remember me</label>
-                        <a href="#">Forgot Password?</a>
-                    </div>
-                    <button type="submit" class="btn-logreg">login</button>
-                    <div class="login-register">
-                        <p>
-                            Don't have an account?
-    
-                            <a href="#" class="register-link">
-                                Register
-                            </a>
-                        </p>
-                    </div>
-                </form>
-            </div>
-            <div class="form-box register">
-                <h2>
-                    Register
-                </h2>
-                <form action="#">
-                    <div class="input-box">
-                        <span class="iconss username-icon"><ion-icon name="person-circle-outline"></ion-icon></span>
-                        <input type="text" required>
-                        <label>Username</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="iconss email-icon"><ion-icon name="mail-outline"></ion-icon></span>
-                        <input type="email" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="iconss password-icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                        <input type="password" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remember-forgot">
-                        <label><input type="checkbox">
-                        agree to the terms & conditions</label>
-                    </div>
-                    <button type="submit" class="btn-logreg">Register</button>
-                    <div class="login-register">
-                        <p>
-                            Already have an account?
-    
-                            <a href="#" class="login-link">
-                                Login
-                            </a>
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <main >
+        
     </main>
-
-    <script src="script.js"></script>
+    <script src="..\js\script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
