--- a/dev/views/wallet.html
+++ b/dev/views/wallet.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Inicio</title>
-	<link rel="stylesheet" href="styles.css"> <!--conectamos nuestro css-->
-    <script src="https://apis.google.com/js/api.js"></script> <!--agregamois la api de google para la funcion del e video mas reciente-->
+    <meta charset="UTF-8">
+    <meta name="author" content="Jhonatan Espinal Garcia">
+    <meta http-equiv="X-UA-Compatible"content="IE=edge">
+    <meta name="robots" content="index">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cartera</title>
+    <link rel="stylesheet" href="..\css\styles.css">
 </head>
-<body>
-	
-	<header>
-        
+<body wallet>
+    <header><!--seccion para el titulo principal y el menu de navegacion
+    -->
         <!--div para nuestro titulo o encabezado de pagina-->
         <div class="container-title">
-            <h1>Inicio.</h1>
+            <h1>Cartera</h1>
             <div class="btnMenu">
                 <button class="btnMenu-popup">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class=".buttom-menu-icon">
@@ -124,7 +125,7 @@
             </nav>
         </div>
     </header>
-	<main>
+    <main>
         <!--Pertenece al boton de login-->
         <div class="btnLogin">
             <button class="btnLogin-popup">login</button>
@@ -203,151 +204,9 @@
                 </form>
             </div>
         </div>
-
-        <!--Pertenece al contenido de la pagina-->
-        <div class="container-subtitle">
-
-            <h2>
-                Conoce el mejor contenido de <b>JhonEG17</b>
-            </h2>
-
-        </div>
-
-        <div class="container-twitch">
-            <div class="container-title">
-
-                <h2>
-                    Últimos streams en Twitch de JhonEG17
-                </h2>
-                
-            </div>
-        
-            <div class="video-container">
-
-                <div class="container-videos">
-
-                    <iframe
-                        src="https://player.twitch.tv/?channel=jhoneg17&parent=localhost:3000"
-                        height="auto"
-                        width="auto"
-                        frameborder="0"
-                        scrolling="no"
-                        allowfullscreen="true"
-                    ></iframe>
-
-                    <iframe
-                        src="https://player.twitch.tv/?channel=jhoneg17&parent=localhost:3000"
-                        height="auto"
-                        width="auto"
-                        frameborder="0"
-                        scrolling="no"
-                        allowfullscreen="true"
-                    ></iframe>
-
-                    <iframe
-                        src="https://player.twitch.tv/?channel=jhoneg17&parent=localhost:3000"
-                        height="auto"
-                        width="auto"
-                        frameborder="0"
-                        scrolling="no"
-                        allowfullscreen="true">
-                    </iframe>
-
-                    <iframe
-                        src="https://player.twitch.tv/?channel=jhoneg17&parent=localhost:3000"
-                        height="auto"
-                        width="auto"
-                        frameborder="0"
-                        scrolling="no"
-                        allowfullscreen="true"
-                    ></iframe>
-
-                </div>
-
-            </div>
-            
-        </div>
-
-        <div class="container-youtube">
-
-            <div class="container-title">
-
-                <h2>
-                    Los más vistos de Left 4 Dead 2.
-                </h2>
-                
-            </div>
-
-            <div class="video-container">
-
-                <div class="container-videos">
-            
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/uzU24BGX4qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/G0RF13UH4N8?si=Fpan6OFtbHu16KUG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/s9dqiYw6Aro?si=JXaBpo0c-6Ffakbr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/h6Dqm0WGifk?si=6_1hIGGTlso2Wh53" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
-                </div> <!-- Aqui se insertas los mejores videos del canal de left 4 dead 2 -->
-        
-            </div>
-        
-            
-            <div class="container-title">
-
-                <h2>
-                    Los más vistos de Resident Evil.
-                </h2>
-                
-            </div>
-
-            <div class="video-container">
-
-                <div class="container-videos">
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/QMZV99_P_D4?si=SND8ip5e0mozv84M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/6xZ76Gpmf6s?si=bHAVKzL8lItb18I9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/Z85NoCZgAas?si=euQcra0U8EFLAH6n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/BJeBN6sxBfI?si=3R3igXRWH8pl2dgS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                </div>
-            </div>
-
-            <div class="container-title">
-
-                <h2>
-                    Los más vistos de GTA San Andreas.
-                </h2>
-                
-            </div>
-        
-            <div class="video-container">
-
-                <div class="container-videos">
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/E88i2VcxiIE?si=iBhROXkRbIyvoMGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/d8yghaSW41k?si=2cQSTRqDQuimJYNr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/kiCy8ow9FZQ?si=_2XaS5IsMwjnx2uW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/jp3hGCyvOWk?si=GMc1sLzkGzOAN5_2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                </div>
-                
-            </div>
-        
-        </div>    
     </main>
-    
-    
-	
-    <script src="script.js"></script>
+
+    <script src="..\js\script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
