--- a/dev/views/autobiografia.html
+++ b/dev/views/autobiografia.html
@@ -3,15 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Mis Redes</title>
-	<link rel="stylesheet" href="styles.css">
+	<title>Sobre Mi</title>
+	<link rel="stylesheet" href="..\css\styles.css">
 </head>
-<body >
-	<header><!--seccion para el titulo principal y el menu de navegacion
-    -->
+<body>
+	<header>
         <!--div para nuestro titulo o encabezado de pagina-->
         <div class="container-title">
-            <h1>Redes Sociales.</h1>
+            <h1>Todo Sobre mi.</h1>
             <div class="btnMenu">
                 <button class="btnMenu-popup">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class=".buttom-menu-icon">
@@ -122,7 +121,7 @@
             </nav>
         </div>
     </header>
-	<main><!--seccion para el contenido de la pagina-->
+    <main>
         <!--Pertenece al boton de login-->
         <div class="btnLogin">
             <button class="btnLogin-popup">login</button>
@@ -201,35 +200,33 @@
                 </form>
             </div>
         </div>
-        
-        <div class="container-subtitle"><!--contenedor para el titulo-->
-
-            <h2>Conóceme y conéctate conmigo en mis distintas redes.</h2><!--Sub titulo-->
+        <!--Creamos este "div" para poder colocar los datos basicos de la persona-->
+        <div class="container-date">
+            
+            <b>Edad: 21<br>Nacionalidad: Mexicano<br>Nombre real: (Nombre Completo)</b><br><!--Mediante un "<b>" colocamos en negritas para resaltar el texto que indica la informacion-->
+            <!--Utilizamos "<br>" para dar saltos de linea y estructurar mejor la informacion-->
             
         </div>
-        <div class="container-enlaces"><!--contenedor para los enlaces-->
-
-            <a href="https://www.facebook.com/JhonEG17z" target="_blank"><img src="imagenes/logos/redes sociales/facebook.png" alt="Facebook"></a>
-
-            <a href="https://www.instagram.com/jhoneg17" target="_blank"><img src="imagenes/logos/redes sociales/instagram.png" alt="Instagram"></a>
-
-            <a href="https://www.youtube.com/@JhonEG17" target="_blank"><img src="imagenes/logos/redes sociales/youtube.png" alt="YouTube"></a>
-
-            <a href="https://twitch.tv/JhonEG17" target="_blank"><img src="imagenes/logos/redes sociales/twitch.png" alt="Twitch"></a>
-
-            <a href="https://www.tiktok.com/@jhon_eg17" target="_blank"><img src="imagenes/logos/redes sociales/tiktok.png" alt="TikTok"></a>
-
-            <a href="https://twitter.com/JhonEG17" target="_blank"><img src="imagenes/logos/redes sociales/x.png" alt="X"></a>
-
-            <a href="https://www.discord.gg/" target="_blank"><img src="imagenes/logos/redes sociales/discord.png" alt="Discord"></a>
-
-
+        <div class="container-bio">
+            
+            <p>    
+                Hola mi nombre es (Nombre), soy un joven streamer y desarrollador de (Edad) años.<br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad modi perferendis molestiae expedita<br>
+                similique ea cum et voluptate, atque obcaecati esse iusto repudiandae, fuga possimus fugiat, eaque amet beatae sed.<br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, velit. Harum similique pariatur assumenda maiores fugit.<br>
+                Laborum perspiciatis quaerat voluptatem dolores? Ipsum enim laboriosam maiores sapiente quam. Possimus, quasi tempora.<br>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad cupiditate porro odio voluptates iusto molestiae,<br>
+                quae odit debitis architecto quia, accusantium quasi? Assumenda ea et earum cupiditate nesciunt a fuga.<br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque libero autem distinctio aliquam.<br>
+                Deleniti cum deserunt quae, amet animi quasi, ducimus enim, voluptatibus eius excepturi consequuntur.<br>
+                Distinctio blanditiis iure harum?.
+            </p><!--Creamos este "<p>" para poder colocar la biografia del streamer-->
+            
         </div>
-
+        
     </main>
 	
-
-    <script src="script.js"></script>
+    <script src="..\js\script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
